--- a/CustomMapMarker/MarkerAddressView.xib
+++ b/CustomMapMarker/MarkerAddressView.xib
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -25,13 +24,12 @@
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="59p-gZ-Ve7" secondAttribute="trailing" constant="10" id="FDh-cQ-w6w"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="59p-gZ-Ve7" secondAttribute="bottom" constant="10" id="OHU-y7-gr0"/>
-                <constraint firstItem="59p-gZ-Ve7" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="10" id="XW9-BP-OiQ"/>
-                <constraint firstItem="59p-gZ-Ve7" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="10" id="hdB-YJ-LQE"/>
+                <constraint firstAttribute="trailing" secondItem="59p-gZ-Ve7" secondAttribute="trailing" constant="10" id="FDh-cQ-w6w"/>
+                <constraint firstAttribute="bottom" secondItem="59p-gZ-Ve7" secondAttribute="bottom" constant="10" id="OHU-y7-gr0"/>
+                <constraint firstItem="59p-gZ-Ve7" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="XW9-BP-OiQ"/>
+                <constraint firstItem="59p-gZ-Ve7" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="hdB-YJ-LQE"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="addressLabel" destination="59p-gZ-Ve7" id="TLk-Nw-A30"/>
             </connections>
