--- a/CustomMapMarker/MarkerPinView.xib
+++ b/CustomMapMarker/MarkerPinView.xib
@@ -1,24 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="MarkerPinView" customModule="CustomMapMarker" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+            <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dropoffDot" translatesAutoresizingMaskIntoConstraints="NO" id="FFh-K1-2hF">
+                    <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="0bH-fF-EAl"/>
+                        <constraint firstAttribute="width" constant="20" id="JzE-9y-iNs"/>
+                    </constraints>
+                </imageView>
+            </subviews>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstItem="FFh-K1-2hF" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Of5-Od-1US"/>
+                <constraint firstItem="FFh-K1-2hF" firstAttribute="bottom" secondItem="iN0-l3-epB" secondAttribute="bottom" id="T0s-Cx-f1q"/>
+                <constraint firstItem="FFh-K1-2hF" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Txp-98-bnh"/>
+                <constraint firstItem="FFh-K1-2hF" firstAttribute="trailing" secondItem="iN0-l3-epB" secondAttribute="trailing" id="VIo-oO-caA"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="-96.5" y="-219.5"/>
+            <point key="canvasLocation" x="-105.59999999999999" y="-224.88755622188907"/>
         </view>
     </objects>
+    <resources>
+        <image name="dropoffDot" width="20" height="20"/>
+    </resources>
 </document>
